# yacba

./: .gitignore  .pre-commit-config.yaml  AGENT_BOOTSTRAP.md  CHANGELOG.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  README.CONFIG.md  README.MODEL_CONFIG.md  README.md  README_INSTALLATION_NOTE.md  TRACE_LOGGING_ENVIRONMENT_GUIDE.md  TRACE_LOGGING_SUMMARY.md  UTILS_RENAME_SUMMARY.md  backup.sh  config.json  mypy.ini  pyproject.toml  test_auto_printer.py  yacba  yacba-dev  yacba.backup  yacba.new
.github/workflows/: dependencies.yml  docs.yml  examples.yml  lint.yml  quality.yml  release.yml  status.yml  test.yml
code/: .coveragerc  .gitignore  ARCHITECTURE.md  CHANGELOG_NESTED_CONFIG.md  MIGRATION_NESTED_CONFIG.md  RESTRUCTURING_SUMMARY.md  __init__.py  __version__.py  callback_handler.py  cli_handler.py  config_parser.py  content_processor.py  custom_handler.py  default_error_patterns.yaml  delegating_session.py  framework_adapters.py  general_utils.py  logging.yaml.example  model_loader.py  performance_utils.py  pytest.ini  requirements-dev.txt  requirements.txt  test_current_yacba.py  test_model_config.py  test_model_config_fixed.py  test_refactored_yacba.py  tool_factory.py  utils.py  yacba  yacba.py  yacba_agent.py  yacba_config.py  yacba_engine.py  yacba_manager.py
code/adapters/: __init__.py
code/adapters/cli/: completer.py
code/adapters/framework/: __init__.py  _utils.py  base_adapter.py  bedrock_adapter.py  factory.py
code/adapters/repl/: __init__.py  backend_adapter.py
code/adapters/repl_toolkit/: __init__.py  backend.py  command_adapter.py  completer.py  tag_manager.py
code/adapters/strands_factory/: __init__.py  backend_adapter.py  config_converter.py
code/adapters/tools/: __init__.py  base_adapter.py  factory.py  mcp_adapters.py  python_adapter.py
code/cli/: __init__.py  async_repl.py  doctor.py  downloader.py  extras_discovery.py  headless.py  install.py  install_extra.py  link.py  list_extras.py  self_update.py  uninstall.py  upgrade_deps.py  version.py
code/cli/commands/: __init__.py  base_command.py  help_command.py  info_commands.py  registry.py
code/cli/interface/: __init__.py  agent_interaction.py  completer.py  error_handling.py  messages.py  session.py
code/config/: __init__.py  arguments.py  arguments.py.bak  dataclass.py  factory.py  factory.py.bak
code/core/: __init__.py  agent.py  callback_handler.py  config.py  config_parser.py  config_parser_fix.py  conversation_manager_factory.py  engine.py  manager.py  model_loader.py  session.py
code/sample-model-configs/: openai-gpt4.json
code/scripts/: fix_strands_session.py
code/tests/: __init__.py  conftest.py
code/utils/: __init__.py  config_discovery.py  config_utils.py  content_processing.py  error_handling.py  error_intelligence.py  exceptions.py  file_utils.py  framework_detection.py  general_utils.py  logging.py  model_config_parser.py  performance_utils.py  session_utils.py  startup_messages.py
code/yacba_types/: __init__.py  backend.py  base.py  cli.py  config.py  content.py  models.py  tools.py
docs/: API.md  ARCHITECTURE.md  FUNCTIONALITY_ANALYSIS.md  README.md  TAG_QUICK_REFERENCE.md  TAG_SYSTEM.md  TROUBLESHOOTING.md
sample-mcp-configs/: aws-cli.mcp.json  aws-doc.mcp.json
sample-model-configs/: anthropic-claude.json  bedrock-claude.json  litellm-gemini.json  openai-gpt4.json
sample-python-tools/: local_tools.py  strands_shell.py
sample-scripts/session-doctor/: MESSAGE-FLOW-DIAGRAMS.md  QUICK-REFERENCE.md  README.md  SESSION-DOCTOR-README.md  session-doctor.sh
sample-scripts/yacba-fifo/: yacba-fifo.sh
sample-tool-configs/: a2a-example.tools.json  aws-cli.tools.json  aws-doc.tools.json  local-files.tools.json  strands-shell.tools.json  strands.tools.json
(+89 files in other folders)
