[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yacba"
version = "1.0.0"
description = "Yet Another ChatBot Agent - A flexible CLI for chatting with AI models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YACBA Contributors"}
]
keywords = ["chatbot", "ai", "cli", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "profile-config>=1.1.0",
    "dataclass-args>=1.1.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "repl-toolkit>=1.2.0",
    "strands-agent-factory @ git+https://github.com/JBarmentlo/strands-agent-factory.git@v1.1.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.3.0"]
ollama = ["ollama>=0.1.0"]
mistral = ["mistralai>=0.0.7"]
litellm = ["litellm>=1.0.0"]
all = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
    "mistralai>=0.0.7",
    "litellm>=1.0.0",
]
dev = ["pytest", "mypy", "black", "ruff"]

[project.scripts]
yacba-cli = "yacba:main"

[project.urls]
Homepage = "https://github.com/bassmanitram/yacba"
Repository = "https://github.com/bassmanitram/yacba"
Documentation = "https://github.com/bassmanitram/yacba/blob/main/README.md"
Changelog = "https://github.com/bassmanitram/yacba/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["code*"]

[tool.setuptools.package-dir]
"" = "."

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
