[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yacba"
version = "2.0.0"
description = "Yet Another ChatBot Agent - A flexible CLI for chatting with AI models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YACBA Contributors"}
]
keywords = ["chatbot", "ai", "cli", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "profile-config>=1.1.0",
    "dataclass-args>=1.1.0",
    "pyyaml>=6.0",
    "envlog>=0.1.0",
    "repl-toolkit>=1.2.0",
    "strands-agent-factory @ git+https://github.com/bassmanitram/strands-agent-factory.git@v1.2.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/bassmanitram/yacba"
Repository = "https://github.com/bassmanitram/yacba"
Documentation = "https://github.com/bassmanitram/yacba/blob/main/README.md"
Changelog = "https://github.com/bassmanitram/yacba/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["code*"]

[tool.setuptools.package-dir]
"" = "."

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
